@@ -1,23 +1,18 @@
 AC_INIT([fwbackups], 1.43.3rc2)
-# Use bz2
 AM_INIT_AUTOMAKE([dist-bzip2 no-dist-gzip])
-# Sanity checks
 AC_CONFIG_SRCDIR([src/fwbackups/__init__.py.in])
-AC_CONFIG_SRCDIR([src/fwbackups-runapp.pyw])
-# Tell automake we're using Python, and we need version >= 2.4
+
+# Search for Python >= 2.4
 AM_PATH_PYTHON([2.4])
 
-#ALL_LINGUAS="bn_IN bn ca cs da de el es fi fr gl gu hi hr hu is it ja ko ml ms nb nl or pa pl pt pt_BR ru sk sl sr@Latn sr sv ta tr uk zh_CN zh_TW"
-
-# for gnome docs
-GNOME_DOC_INIT
-AC_CONFIG_MACRO_DIR([m4])
-
+# Setup gettext translation
+ALL_LINGUAS=""
 GETTEXT_PACKAGE=fwbackups
 AC_SUBST(GETTEXT_PACKAGE)
-AM_GLIB_GNU_GETTEXT
+# Use intltool
 AC_PROG_INTLTOOL
 
+# Output files
 AC_CONFIG_FILES([
 bin/Makefile
 bin/fwbackups
@@ -31,4 +26,7 @@ src/fwbackups/__init__.py
 Makefile
 fwbackups.spec
 ])
+
+# Start
 AC_OUTPUT
+
